feat: add springboot3 security with basic auth
