# src/main/java/com/kcm/msp/dev/app2/development/prototype/microservice/service/UserService.java
@@ -1,9 +1,12 @@
 package com.kcm.msp.dev.app2.development.prototype.microservice.service;
 
+import com.kcm.msp.dev.app2.development.prototype.microservice.server.models.CreateUserRequest;
 import com.kcm.msp.dev.app2.development.prototype.microservice.server.models.User;
 import java.util.List;
 
 public interface UserService {
 
   List<User> listUsers(Integer limit);
+
+  User createUser(CreateUserRequest request);
 }
